syntax = "proto3";
package takasho.schema.fes.resource.player_preference.v1;

message PlayerPreference {
  string player_id = 1;
  uint64 player_level = 2;
  bool is_my_space_released = 3;
}
